    too slow:
    - Fix wrong radio buttons when changing shortcuts.
      + fix-wrong-radio-buttons.patch
      + Upstream commit a9ec3c0.
    - Avoid polluting the the x11 shortcut map.
      + avoid-polluting-x11-shortcut-map.patch
      + Upstream commit c79d560.
    - Add super key binding support.
      + add-super-key-binding-support.patch
      + Upstream commit fc35a3b.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Mon, 05 Feb 2018 20:38:35 -0600

lxqt-globalkeys (0.12.0-3) unstable; urgency=medium

  * Bumped Standards to 4.1.2, no changes needed
  * Removed branch from VCS fields
  * Removed debian/gbp.conf

 -- Alf Gaida <agaida@siduction.org>  Thu, 14 Dec 2017 19:41:44 +0100

lxqt-globalkeys (0.12.0-2) unstable; urgency=medium

  * Transition to unstable

 -- Alf Gaida <agaida@siduction.org>  Mon, 04 Dec 2017 22:32:04 +0100

lxqt-globalkeys (0.12.0-1) experimental; urgency=medium

  * Cherry-picking upstream release 0.12.0.
  * Switched to experimental
  * Bumped liblxqt0-dev to >= 0.12.0
  * Bumped Standards to 4.1.1 +Vcs-Browser: 
  * Added Breaks/Replaces for lxqt-common << 0.12.0
  * Added override_dh_missing
  * Added autostart things to install

 -- Alf Gaida <agaida@siduction.org>  Tue, 24 Oct 2017 17:24:29 +0200

lxqt-globalkeys (0.11.1-2) unstable; urgency=medium

  * Bump Standards to 4.0.0 - no changes needed
  * Recommend lxqt-qtplugin (Closes: #866235)
  * Recommend lxqt-session - globalkeys make only sense with the session
  * Suggest lxqt | lxqt-core

 -- Alf Gaida <agaida@siduction.org>  Sat, 01 Jul 2017 21:47:02 +0200

lxqt-globalkeys (0.11.1-1) unstable; urgency=medium

  * Cherry-picking upstream release 0.11.1.
  * Removed some build dependencies:
    -cmake
    -libqt5xdg-dev
    -libqt5xdgiconloader-dev
    -pkg-config
    -qttools5-dev
    -qttools5-dev-tools
  * Bumped build dependency liblxqt0-dev (>= 0.11.1)
  * Bumped years in d/copyright

 -- Alf Gaida <agaida@siduction.org>  Mon, 02 Jan 2017 13:28:07 +0100
